Rework the ChannelStatusRegister API for common operations
A set of basic function has been added, namely `get`, `set`, `set_all`
as well as basic iterating over the internal channel statuses. To keep
the interface simple there is no exposure of the internal boolean
representation and the code will take care to convert between boolean
values used by the internal bitvector and `ChannelStatus` values.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ name = "libarc2"
 [dependencies]
 ndarray = "0.14"
 bitvec = "0.21"
+num-derive = "0.3"
+num-traits = "0.2"
 
 [dependencies.beastlink]
 path = "../beastlink-rs"
@@ -17,3 +19,4 @@ version = "0.1"
 
 [dev-dependencies]
 serial_test = "0.4"
+assert_matches = "1.5"
