--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,7 @@ version = "0.1"
 [dev-dependencies]
 serial_test = "0.4"
 assert_matches = "1.5"
+
+[features]
+# enable this to run hardware tests with cargo test
+hardware_tests = []
