--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,5 @@ assert_matches = "1.5"
 [features]
 # enable this to run hardware tests with cargo test
 hardware_tests = []
+# enable this to print out raw packets to stderr
+debug_packets = []
