Add a Cargo debug feature to prevent writes to ArC2

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,5 @@ assert_matches = "1.5"
 hardware_tests = []
 # enable this to print out raw packets to stderr
 debug_packets = []
+# enabling this prevents libarc2 from writing to the hardware
+dummy_writes = []
