Add a compile time feature to zero memory segments before writing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,5 @@ hardware_tests = []
 debug_packets = []
 # enabling this prevents libarc2 from writing to the hardware
 dummy_writes = []
+# enable this to zero memory segments before writing
+zero_before_write = []
