Use error enums instead of strings for error reporting

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ bitflags = "1.2"
 num-derive = "0.3"
 num-traits = "0.2"
 lazy_static = "1.4"
+thiserror = "1.0"
 
 [dependencies.beastlink]
 path = "../beastlink-rs"
