Initial support for flag addresses
This commits adds support for addresses that hold "operation completed"
flags. These will be used by the firmware to notify the donwstream user
of the library that a result has been committed to memory. It is the
responsibility of the user to clear the flag after the value has been
retrieved. This functionality is gated behind a cargo feature because
more testing is currently required.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,8 @@ serial_test = "0.4"
 assert_matches = "1.5"
 
 [features]
+# enable flag addresses to check data validity
+flag_addresses = []
 # enable this to run hardware tests with cargo test
 hardware_tests = []
 # enable this to print out raw packets to stderr
