--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ name = "libarc2"
 
 [dependencies]
 ndarray = "0.15"
-bitvec = "0.21"
+bitvec = "~1.0"
 bitflags = "1.2"
 num-derive = "0.3"
 num-traits = "0.2"
