--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Spyros Stathopoulos <spyros@arc-instruments.co.uk>"]
 description = "Low-level interface library for ArC TWO™"
 edition = "2018"
-license = "LGPLv2"
+license = "MPL-2.0"
 homepage = "http://arc-instruments.co.uk"
 repository = "https://github.com/arc-instruments/libarc2"
 
