Use `spin_sleep::sleep` for more accurate `WRITEDELAY`s

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ num-derive = "0.3"
 num-traits = "0.2"
 lazy_static = "1.4"
 thiserror = "1.0"
+spin_sleep = "1.1"
 
 [dependencies.beastlink]
 path = "../beastlink-rs"
