--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,10 +22,7 @@ num-traits = "0.2"
 lazy_static = "1.4"
 thiserror = "1.0"
 spin_sleep = "1.1"
-
-[dependencies.beastlink]
-path = "../beastlink-rs"
-version = "0.1"
+beastlink = { git = "https://github.com/arc-instruments/beastlink-rs" }
 
 [dev-dependencies]
 serial_test = "0.4"
