--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ num-traits = "0.2"
 lazy_static = "1.4"
 thiserror = "1.0"
 spin_sleep = "1.1"
-beastlink = { git = "https://github.com/arc-instruments/beastlink-rs" }
+beastlink = { git = "https://github.com/arc-instruments/beastlink-rs", version = "1.0" }
 
 [dev-dependencies]
 serial_test = "0.4"
