--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ num-traits = "0.2"
 lazy_static = "1.4"
 thiserror = "1.0"
 spin_sleep = "1.1"
+
+[target.'cfg(all(any(target_os = "windows", target_os = "linux"), target_arch = "x86_64"))'.dependencies]
 beastlink = { git = "https://github.com/arc-instruments/beastlink-rs", version = "1.0" }
 
 [dev-dependencies]
