--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "libarc2"
-version = "0.1.2-a0"
+version = "0.2.0"
 authors = ["Spyros Stathopoulos <spyros@arc-instruments.co.uk>"]
 description = "Low-level interface library for ArC TWO™"
 edition = "2018"
@@ -15,7 +15,7 @@ name = "libarc2"
 
 [dependencies]
 bitvec = "~1.0"
-bitflags = "1.2"
+bitflags = "1.3"
 num-derive = "0.3"
 num-traits = "0.2"
 lazy_static = "1.4"
